--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ torchvision==0.20.1
 --extra-index-url https://download.pytorch.org/whl/cu121
 diffusers==0.32.2
 transformers==4.48.0
-decord==0.6.0
+# decord==0.6.0
 accelerate==0.26.1
 einops==0.7.0
 omegaconf==2.3.0
 opencv-python==4.9.0.80
+requests>=2.31.0
+tqdm>=4.66.1
 mediapipe==0.10.11
 python_speech_features==0.6
 librosa==0.10.1
@@ -22,5 +24,5 @@ huggingface-hub==0.30.2
 numpy==1.26.4
 kornia==0.8.0
 insightface==0.7.3
-onnxruntime-gpu==1.21.0
+onnxruntime==1.21.0
 DeepCache==0.1.1
